# NativeConsoleApplicationsCPP

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  TODO.md  devnotes.md
apps/: CMakeLists.txt
apps/BannerText/: AppDetails.h  AppVersionInfo.rc  CMakeLists.txt  Options.hpp  main.cpp
apps/GUIDGen/: AppDetails.h  AppVersionInfo.rc  CMakeLists.txt  GUID.cpp  GUID.hpp  GuidHelper.hpp  Options.hpp  main.cpp
apps/GUIDGen/Generators/: BaseGUIDGenerator.hpp  GUIDGeneratorFactory.hpp  KashmirGUIDGenerator.cpp  KashmirGUIDGenerator.hpp  StandardGUIDGenerator.cpp  StandardGUIDGenerator.hpp
apps/PathList/: AppDetails.h  AppVersionInfo.rc  CMakeLists.txt  DirectoriesSummary.hpp  Options.hpp  main.cpp
apps/PauseN/: AppDetails.h  AppVersionInfo.rc  CMakeLists.txt  Options.hpp  main.cpp
cmake/: common.cmake  cpp_common.cmake  cpp_defaults.cmake
cmake/templates/: AppDetails.h.template  AppVersionInfo.rc.template
docs/: references.md
libs/: CMakeLists.txt
libs/crossguid/: readme.txt
libs/dnx_utilities/: AppDetails.h  AppVersionInfo.rc  CMakeLists.txt
libs/dnx_utilities/docs/: links.md
libs/dnx_utilities/src/: Comparator.cpp  Comparator.h  Converter.cpp  Converter.h  EnumUtils.cpp  EnumUtils.h  FileUtils.cpp  FileUtils.h  ListUtils.cpp  ListUtils.h  Maps.cpp  Maps.h  Strings.cpp  Strings.h
libs/dnx_utilities/tests/: CMakeLists.txt  Strings_Test.cpp
